Fixing main layout issue

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -37,6 +37,7 @@ $mainSiteNavWidth: 272px;
     background: url("../assets/images/b-l.jpg") repeat-y top right;
   }
   #middle-panel {
+    max-width: 1100px;
   border-right: 1px solid #cccccc;
   .demo-section-title {
     white-space: nowrap;
